// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container: ObjectProperties component should not render anything when there is no label or table 1`] = `""`;

exports[`Container: ObjectProperties component should render layout correctly (one label) 1`] = `
<ObjectPropertiesstyles__PropertiesContainer>
  <LabelProperties
    label={
      Label {
        "confidence": 0.8,
        "content": "MOCK FIELD KEY 1",
        "fieldCode": "MOCK_FIELD_1",
        "h": 0.4,
        "index": 0,
        "meta": Object {},
        "type": "key",
        "typeName": "label",
        "uid": "1",
        "w": 0.3,
        "x": 0.1,
        "y": 0.2,
      }
    }
  />
</ObjectPropertiesstyles__PropertiesContainer>
`;

exports[`Container: ObjectProperties component should render layout correctly (one table) 1`] = `
<ObjectPropertiesstyles__PropertiesContainer>
  <TableProperties
    table={
      Table {
        "fieldCode": "",
        "index": undefined,
        "merges": Array [],
        "meta": Object {},
        "typeName": "table",
        "uid": "6",
        "values": Array [],
        "xGuidelines": Array [
          0.21,
          0.33,
        ],
        "yGuidelines": Array [
          0.1,
          0.67,
        ],
      }
    }
  />
</ObjectPropertiesstyles__PropertiesContainer>
`;

exports[`Container: ObjectProperties mapStateToProps should pass expected state props to WrappedComponent 1`] = `
Object {
  "currentPage": 1,
  "selectedLabels": Array [
    Label {
      "confidence": 0.8,
      "content": "MOCK FIELD KEY 1",
      "fieldCode": "MOCK_FIELD_1",
      "h": 0.4,
      "index": 0,
      "meta": Object {},
      "type": "key",
      "typeName": "label",
      "uid": "1",
      "w": 0.3,
      "x": 0.1,
      "y": 0.2,
    },
  ],
  "selectedTables": Array [],
}
`;
